--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Meu aniversário</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
-    <h1>Olá</h1>
-    <img src="./images/bolo.png" alt="">
+    <header class="hero">
+        <div class="container">
+            <img class="hero__logo" src="./images/felizaniversario.png" alt="EBAC">
+            <p class="hero__text">
+                O melhor dia do ano chega em: <br> <span id="contador"></span>
+            </p>
+            <div class="infos-bar">
+                <ul class="infos-bar__infos">
+                    <li class="infos-bar__infos__item">
+                        <b>Localização</b>
+                        Minha casa - São Paulo - SP
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Dia</b>
+                        21/02/2026
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Horário</b>
+                        19Hr
+                    </li>
+                </ul>
+                <a href="#" class="button button--primary">
+                    Confirme sua presença
+                </a>
+            </div>
+        </div>
+    </header>
 
+    <section class="event event--churrasco">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Churrasco</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, reiciendis. Inventore molestiae, delectus at soluta nobis, itaque voluptatum quam sint quisquam error sed voluptates illo totam repellendus sapiente, ullam nihil?
+                </p>
+            </div>
+            <img class="event__image" src="./images/churrasco.png" alt="Churrasco">
+        </div>
+    </section>
+    <section class="event event--piscina event--image-left">
+        <div class="container"  data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">Piscina</h2>
+                <p class="event__details__description">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique mollitia aliquid voluptatibus autem, dolorum id neque ducimus laboriosam magni ipsam! Sed doloribus maxime eos dignissimos accusamus iure excepturi veritatis veniam.
+                </p>
+            </div>
+            <img class="event__image" src="./images/piscina.png" alt="Piscina">
+        </div>
+    </section>
+    <section class="event event--bolo">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Bolo</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam tempore eum quia, optio delectus quas ab repellat beatae dolorem deserunt placeat, error in cum iste velit molestias, voluptatem soluta esse.
+                </p>
+            </div>
+            <img class="event__image" src="./images/bolo.png" alt="Bolo">
+        </div>
+    </section>
+    <section class="event event--presente event--image-left">
+        <div class="container"  data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">Presente</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptate nesciunt corrupti dolores nam facere iste, quisquam natus hic necessitatibus. Ex voluptatibus praesentium fugit id et omnis, libero illum exercitationem.
+                </p>
+            </div>
+            <img class="event__image" src="./images/presentes.png" alt="Presentes">
+        </div>
+    </section>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
 </html>
